--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -30,7 +30,7 @@
   border-radius: $border-radius-xl;
   padding: 10px 0;
   margin: 10px 0 4px 0;
-  min-height: 110px;
+  min-height: 127px;
   width: 100%;
 }
 
@@ -95,8 +95,8 @@
 
 .textarea {
   width: 100%;
-  min-height: 50px;
-  max-height: 240px;
+  min-height: 65px;
+  max-height: 65px;
   border: none;
   background: transparent;
   font-size: $font-size-base;
@@ -114,7 +114,7 @@
 .actions {
   display: flex;
   justify-content: flex-end;
-  padding: 0 6px;
+  padding: 0 10px;
 }
 
 .arrow_down {
