--- a/src/designSystem/theme/mixins.scss
+++ b/src/designSystem/theme/mixins.scss
@@ -109,7 +109,7 @@
   margin: 0 auto;
   padding: 0 $container-padding;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 // ===== TYPOGRAPHY MIXINS =====
